--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+beautifulsoup4==4.13.4
+bs4==0.0.2
 certifi==2025.1.31
 charset-normalizer==3.4.2
 click==8.1.8
@@ -13,12 +15,14 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+lxml==5.4.0
 multidict==6.4.4
 propcache==0.3.1
 pydantic==2.11.1
 pydantic_core==2.33.0
 requests==2.32.3
 sniffio==1.3.1
+soupsieve==2.7
 starlette==0.46.1
 typing-inspection==0.4.0
 typing_extensions==4.13.0
