--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,12 @@ anyio==4.9.0
 attrs==25.3.0
 beautifulsoup4==4.13.4
 bs4==0.0.2
+cachetools==6.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.2
 click==8.1.8
+currency-converter-free==1.0.9
+diskcache==5.6.3
 fastapi==0.115.12
 frozenlist==1.6.2
 h11==0.14.0
@@ -20,10 +23,13 @@ multidict==6.4.4
 propcache==0.3.1
 pydantic==2.11.1
 pydantic_core==2.33.0
+PyYAML==6.0.2
 requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.7
 starlette==0.46.1
+tabulate==0.9.0
+tks-api-official==1.0.3
 typing-inspection==0.4.0
 typing_extensions==4.13.0
 urllib3==2.4.0
