--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,7 @@ urllib3==2.4.0
 uvicorn==0.34.0
 yarl==1.20.0
 capsolver==1.0.0
+google-api-python-client==2.153.0
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+openpyxl==3.1.5
