--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,7 @@ GOOGLE_SHEETS_API_KEY=your_google_sheets_api_key_here
 # For solving CAPTCHAs in customs calculators
 CAPSOLVER_API_KEY=your_capsolver_api_key_here
 
-# Proxy Configuration (if needed)
-# PROXY_AUTH=username:password
+# Oxylabs Proxy Configuration
+# Required for web scraping Korean/Chinese automotive marketplaces
+OXYLABS_PROXY=kr-pr.oxylabs.io:30000
+OXYLABS_AUTH=your_oxylabs_username:your_oxylabs_password
