--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@ CAPSOLVER_API_KEY=your_capsolver_api_key_here
 
 # Oxylabs Proxy Configuration
 # Required for web scraping Korean/Chinese automotive marketplaces
-OXYLABS_PROXY=kr-pr.oxylabs.io:30000
+OXYLABS_PROXY=ru-pr.oxylabs.io:10000
 OXYLABS_AUTH=your_oxylabs_username:your_oxylabs_password
