--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,7 @@ CAPSOLVER_API_KEY=your_capsolver_api_key_here
 
 # Oxylabs Proxy Configuration
 # Required for web scraping Korean/Chinese automotive marketplaces
-OXYLABS_PROXY=ru-pr.oxylabs.io:10000
+# Note: Port changed from 10000 to 40000
+OXYLABS_RU_PROXY=ru-pr.oxylabs.io:40000
+OXYLABS_KR_PROXY=kr-pr.oxylabs.io:40000
 OXYLABS_AUTH=your_oxylabs_username:your_oxylabs_password
